--- a/public/sass/_variables.dark.scss
+++ b/public/sass/_variables.dark.scss
@@ -282,8 +282,8 @@ $footer-link-hover:   $gray-4;
 
 // Changelog and diff
 // -------------------------
-$diff-label-bg:         $dark-2;
-$diff-label-fg:         $gray-4;
+$diff-label-bg:         rgba(42,39,39,50);
+$diff-label-fg:         $white;
 
 $diff-switch-bg:        $dark-5;
 $diff-switch-disabled:  $gray-1;
