--- a/public/sass/_variables.dark.scss
+++ b/public/sass/_variables.dark.scss
@@ -282,7 +282,7 @@ $footer-link-hover:   $gray-4;
 
 // Changelog and diff
 // -------------------------
-$diff-label-bg:         rgba(42,39,39,50);
+$diff-label-bg:         rgba(42,39,39,.5);
 $diff-label-fg:         $white;
 
 $diff-switch-bg:        $dark-5;
