Contrast tweaks to match mocks

--- a/public/sass/_variables.dark.scss
+++ b/public/sass/_variables.dark.scss
@@ -282,13 +282,13 @@ $footer-link-hover:   $gray-4;
 
 // Changelog and diff
 // -------------------------
-$diff-label-bg:         rgba(42,39,39,.5);
+$diff-label-bg:         $dark-2;
 $diff-label-fg:         $white;
 
 $diff-switch-bg:        $dark-5;
 $diff-switch-disabled:  $gray-1;
 
-$diff-group-bg:         $dark-3;
+$diff-group-bg:         $dark-4;
 $diff-arrow-color:      $white;
 
 $diff-json-bg:          $dark-4;
